gateway info synchronization
